--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 - pip install -r requirements.txt
 # command to run tests
 script: 
-- bash install-opencv.sh
+- bash -y install-opencv.sh
