--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
   - "2.7"
 # command to install dependencies
 install: 
-- wget 'https://raw.githubusercontent.com/milq/scripts-ubuntu-debian/master/install-opencv.sh'
+- wget 'https://raw.githubusercontent.com/alee156/clviz/master/install-opencv.sh'
 - sudo apt-get install libopencv-dev python-opencv
 - sudo apt-get autoremove libopencv-dev python-opencv
 - pip install -r requirements.txt
 # command to run tests
 script: 
-- bash -y install-opencv.sh
+- bash install-opencv.sh
